remove delete from available docs
